# solana-nft-staking-vault

./: .gitignore  Anchor.toml  README.md  SECURITY_AUDIT_FIXES.md  package.json
app/: jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
app/src/__tests__/e2e/: accessibility.spec.ts  nft-grid.spec.ts  performance.spec.ts  staking-operations.spec.ts  wallet-connection.spec.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: Header.tsx  LazyRoute.tsx  LazyWrapper.tsx  MonitoringDashboard.tsx  NFTCard.tsx  NFTGrid.tsx  RewardsPanel.tsx  Settings.tsx  StakingDashboard.tsx  StakingInterface.tsx  UpgradeManager.tsx  VirtualizedList.tsx
app/src/components/admin/: AdminDashboard.tsx
app/src/components/forms/: ConfigForm.tsx  RoleForm.tsx  StakingForm.tsx  index.ts
app/src/components/modals/: ConfirmModal.tsx  SettingsModal.tsx  StakingModal.tsx  index.ts
app/src/components/ui/: Button.tsx  Card.tsx  ConfirmationModal.tsx  ConnectionStatus.tsx  Input.tsx  LazyImage.tsx  LoadingSpinner.tsx  Modal.tsx  ProgressBar.tsx  Skeleton.tsx  (+3 more)
app/src/contexts/: WalletProvider.tsx
app/src/hooks/: useNFTs.ts  useStaking.ts
app/src/types/: program.ts
app/src/utils/: bundleSplitting.ts  cache.ts  constants.ts  dynamicImports.ts  errorHandling.ts  monitoring.ts  performance.ts  program.ts  retry.ts  validation.ts
programs/solana-nft-staking-vault/: Cargo.toml
programs/solana-nft-staking-vault/src/: lib.rs
scripts/: deploy.sh  initialize-vault.ts
tests/: solana-nft-staking-vault.ts
(+3 files in other folders)
