[package]
name = "solana-nft-staking-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_nft_staking_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"

[dev-dependencies]
solana-program-test = "~1.18.0"
tokio = "1.0"